# advent-of-code-2021

./: .gitignore  COPYING  Cargo.toml  README.md
src/: lib.rs  main.rs
src/day_1/: mod.rs
src/day_2/: mod.rs
src/day_3/: mod.rs
src/day_4/: mod.rs
src/day_5/: mod.rs
src/day_6/: mod.rs
src/day_7/: mod.rs
src/day_8/: mod.rs
