[package]
name = "advent-of-code-2021"
version = "0.0.1"
authors = ["Abhiram K <4kuchibh@gmail.com>"]
description = "My solutions to Advent of Code 2021 in Rust."
readme = "README.md"
edition = "2021"

[lib]
name = "advent_runner"
path = "src/lib.rs"

[[bin]]
name = "advent_runner"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itermore = "0.1.0"
itertools = "0.10.1"
nalgebra = "0.29.0"

[features]
